 - #5909, ST_ValueCount crashes on empty table (Paul Ramsey)
 - #5917, ST_Relate becomes unresponsive (Paul Ramsey)
 - #5985, Fix configure issue with Debian 12 and 13 (Regina Obe, Sandro Santilli)
 - #5991, CircularString distance error (Paul Ramsey)
 - #5962, Consistent clipping of MULTI/POINT (Paul Ramsey)
 - #5989, CurvePolygon distance error (Paul Ramsey)


PostGIS 3.3.8
2024-12-22

PostgreSQL 11-17 required. GEOS 3.6+ required but GEOS 3.11+ to take advantage of all features.
Proj 4.9+ required.

* Bug Fixes and Enhancements *

 - #5785, [raster] ST_MapAlgebra segfaults when expression references
          a supernumerary rast argument (Dian M Fay)
 - #5787, [topology] Check that ST_ChangeEdgeGeom doesn't change winding of rings
          (Sandro Santilli)
 - #5795, [topology] Fix ST_NewEdgesSplit can cause invalid topology
          (Björn Harrtell)
 - #5677, Retain SRID during unary union (Paul Ramsey)
 - #5925, #5946, [topology] Have GetFaceContainingPoint survive EMPTY edges (Sandro Santilli)

* Enhancements *

  - #5782, [topology] Improve robustness of min distance calculation (Sandro Santilli)

* Breaking Changes *

  - #5799, make ST_TileEnvelope clips envelopes to tile plane extent (Paul Ramsey)


PostGIS 3.3.7
2024-09-05

This version requires PostgreSQL 11-17, GEOS 3.6 or higher, and Proj 4.9+
Additional features are enabled if you are running GEOS 3.9+
(and ST_MakeValid enhancements with 3.10+), Proj 6.1+,
and PostgreSQL 15+.

* Bug Fixes and Enhancements *

 - #5766, Always report invalid non-null MBR of universal face (Sandro Santilli)
 - #5709, Fix loose mbr in topology.face on ST_ChangeEdgeGeom (Sandro Santilli)
 - #5698, Fix robustness issue splitting line by vertex very close to endpoints,
          affecting topology population functions (Sandro Santilli)
 - #5649, ST_Value should return NULL on missing band (Paul Ramsey)
 - #5677, ST_Union(geom[]) should unary union single entry arrays (Paul Ramsey)